# agentic-ai-bootcamp

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
agents/: crew.py
app/: main.py  streamlit_app.py
config/: agents.yaml  tasks.yaml
src/: crew.py
tests/: test_crew.py
tools/: custom_tools.py
